zeit.find changes
=================

0.5 (unreleased)
----------------

0.4 (2009-05-26)
----------------

- Anzeige der Anzahl für die facetierte Suche.

- Enter-Taste startet die Suche.

- Relateds in Suchergebnissen

- Veröffentlichungs-Status anzeigen

- Vorschau-Links

- Erweiterte Suche

0.3 (2009-05-17)
-----------------

- Kommunikation mit Solr, d.h. es werden echte Daten angezeigt.

- Alle ``test.py`` nach ``tests.py`` umbenannt.

0.2 (2009-04-30)
----------------

- Suchergebnisse haben jetzt den »Favorite-Star«. Markierte Objekte tauchen im
  Tab »Favoriten« und im Clipboard auf.


0.1 (2009-04-23)
---------------

- Erstes Release: Such-UI mit statischen Daten