@@ -2,7 +2,7 @@
   width: 300px;
 }
 
-#search_result {
+.search_result {
   clear: both;
   padding: 1em 0 0 0;
 }
