@@ -32,6 +32,14 @@ zeit.find = {};
         });
     };
 
+    var for_this_page_loader = function(element, data) {
+        var result_element = MochiKit.DOM.getFirstElementByTagAndClassName(
+            'div', 'search_result', element);
+        var search = MochiKit.Base.clone(data['search']);
+        search['_path'] = null;
+        zeit.find.for_this_page_results.render(result_element, null, search);
+    }
+
 
     var init = function() {
 
@@ -51,20 +59,31 @@ zeit.find = {};
         zeit.find.favorites = new zeit.cms.JSONView(
             base_url + 'favorites', 'favorites');
 
+        zeit.find.for_this_page = new zeit.cms.JSONView(
+            context_url + '/@@for-this-page-search',
+            'for-this-page')
+        zeit.find.for_this_page_results = new zeit.cms.JSONView(
+            base_url + 'search_result');
+
         MochiKit.Signal.connect(zeit.find.search_form, 'load', init_search_form);
 
-        new zeit.find.SearchResultsDraggable(zeit.find.search_result)
-        new zeit.find.Relateds(zeit.find.search_result);
-        new zeit.find.ToggleFavorited(zeit.find.search_result);
-      
-        new zeit.find.SearchResultsDraggable(zeit.find.favorites)
-        new zeit.find.Relateds(zeit.find.favorites);
-        new zeit.find.ToggleFavorited(zeit.find.favorites);
-        
+        var search_results = function(view) {
+            new zeit.find.SearchResultsDraggable(view);
+            new zeit.find.Relateds(view);
+            new zeit.find.ToggleFavorited(view);
+        }
+
+        search_results(zeit.find.search_result);
+        search_results(zeit.find.favorites);
+        search_results(zeit.find.for_this_page_results);
+
         new zeit.find.TimeFilters(zeit.find.result_filters);
         new zeit.find.AuthorFilters(zeit.find.result_filters);
         new zeit.find.TopicFilters(zeit.find.result_filters);
         new zeit.find.TypeFilters(zeit.find.result_filters);
+
+        MochiKit.Signal.connect(
+            zeit.find.for_this_page, 'load', for_this_page_loader);
 
         zeit.find.search_form.render();
         zeit.find.tabs = new zeit.cms.Tabs('cp-search');
@@ -72,8 +91,8 @@ zeit.find = {};
             'search_form', 'Suche', zeit.find.search_result));
         zeit.find.tabs.add(new zeit.cms.ViewTab(
             'favorites', 'Favoriten', zeit.find.favorites));
-        zeit.find.tabs.add(new zeit.cms.Tab(
-            'for-this-page', 'Für diese Seite'));
+        zeit.find.tabs.add(new zeit.cms.ViewTab(
+            'for-this-page', 'Für diese Seite', zeit.find.for_this_page));
     };
 
     var search_form_parameters = function() {
@@ -97,7 +116,7 @@ zeit.find.Component = gocept.Class.extend({
 
     on_load: function(element, data) {
         var self = this;
-        self.disconnect(); 
+        self.disconnect();
         self.connect(element, data);
     },
 
@@ -130,7 +149,6 @@ zeit.find.Relateds = zeit.find.Component.extend({
             self.events.push(
                 MochiKit.Signal.connect(related_links, 'onclick', function() {
                     self.toggle(related_links, related_info, related_url);
-            
             }));
         });
     },
