@@ -1,0 +1,2 @@
+<div class="search_result">
+</div>
